Added course code

--- a/pom-mandatory-assignment/frontpage.tex
+++ b/pom-mandatory-assignment/frontpage.tex
@@ -34,7 +34,7 @@
   % Adjust the type of assignment and course here
   % 
   Mandatory Assignment $<$number$>$\\
-  Course: $<$Course$>$\\
+  Course: SB6-POM\\
   Term: $<$Term, e.g. Spring 2021$>$\\
   Handed in: \today
   
