--- a/pom-mandatory-assignment/frontpage.tex
+++ b/pom-mandatory-assignment/frontpage.tex
@@ -35,7 +35,7 @@
   % 
   Mandatory Assignment $<$number$>$\\
   Course: SB6-POM\\
-  Term: $<$Term, e.g. Spring 2021$>$\\
+  Term: $<$Term, e.g. Spring \the\year$>$\\
   Handed in: \today
   
   \renewcommand{\contentsname}{}
