Changed to case analysis

--- a/pom-mandatory-assignment/frontpage.tex
+++ b/pom-mandatory-assignment/frontpage.tex
@@ -34,7 +34,7 @@
   % Adjust the type of assignment and course here
   % 
   Mandatory Assignment $<$number$>$\\
-  Course: SB6-POM\\
+  Course: SE6-POM\\
   Term: $<$Term, e.g. Spring \the\year$>$\\
   Handed in: \today
   
