--- a/pom-mandatory-assignment/main.tex
+++ b/pom-mandatory-assignment/main.tex
@@ -34,8 +34,8 @@
 
 \newpage
 
-\input{assignment.tex}
-%\input{case_analysis.tex}
+%\input{assignment.tex}
+\input{case_analysis.tex}
 
 %\appendix
 
